tests/NormalTests/paczka1/small_fuzzy/28065102.err
Error in line 1: S614 S378 2,9
Error in line 8: 5Up S614 83,8
